--- a/Documentation.tex
+++ b/Documentation.tex
@@ -2,11 +2,11 @@
 
 \usepackage{cite}
 
-\title{Bare Demo of IEEEtran.cls\\ for IEEE Journals}
+\title{Sample title}
 
 \author{\IEEEauthorblockN{Liam Attard [0299300L] }
 \IEEEauthorblockA{Department of Artificial Intelligence} 
-\textit{Faculy of Information \& Technology }\\
+\textit{University of Malta}\\
 \textit{liam.attard.18@um.edu.mt}}
 
 \begin{document}
@@ -16,9 +16,9 @@
   \section{Introduction}
     \input{sections/Introduction}
 
+  \section{Literature Review}
+
   \bibliographystyle{IEEEtran}
-  \bibliography{library}
+  \bibliography{fypReferences}
 
 \end{document}
-
-
