--- a/sections/Introduction.tex
+++ b/sections/Introduction.tex
@@ -1,17 +1,16 @@
 \subsection{Problem Definition}
 
-        \IEEEPARstart{T}{his} demo file is intended to serve as a ``starter file''
-        for IEEE journal papers produced under \LaTeX\ using
-        IEEEtran.cls version 1.8b and later.
-        I wish you the best of success.
+        Producing an itinerary before a trip can be a demanding task
+        which requires massive amounts of research. Many times people
+        rely on books, individual travel blogs and online websites to
+        form such a schedule but these end up portraying other
+        traveller’s preferences and opinions\cite{DeChoudhury2010}.
 
+        An adequate trip planner application would consist of two
+        parts, data retrieval based on the end-user and a generated
+        itinerary. Automatic itinerary generators such as 
+        \cite{DeChoudhury2010,DUNSTALL2008a,DiBitonto2010a,Gavalas
+        ,Tumas2009} 
         
 
-        \subsection{Subsection Heading Here}
-        Subsection text here.
-
-        \cite{MichaelHemsworth2019}
-        \cite{DUNSTALL2008a}
-
-        \subsubsection{Subsubsection Heading Here}
-        Subsubsection text here.
+        
