--- a/Documentation.tex
+++ b/Documentation.tex
@@ -2,7 +2,7 @@
 
 \usepackage{cite}
 
-\title{Sample title}
+\title{Intelligent Tourist Travel Planner}
 
 \author{\IEEEauthorblockN{Liam Attard [0299300L] }
 \IEEEauthorblockA{Department of Artificial Intelligence} 
