--- a/sections/Introduction.tex
+++ b/sections/Introduction.tex
@@ -1,16 +1,27 @@
 \subsection{Problem Definition}
 
         Producing an itinerary before a trip can be a demanding task
-        which requires massive amounts of research. Many times people
-        rely on books, individual travel blogs and online websites to
-        form such a schedule but these end up portraying other
-        traveller’s preferences and opinions\cite{DeChoudhury2010}.
+        which requires  a substantial amount of  research. Many times
+        people rely on travel books, individual travel blogs and online
+        websites to form a holiday plan, but these end up influencing 
+        traveller’s preferences and opinions \cite{DeChoudhury2010}. 
+        % Ask about this citation
 
-        An adequate trip planner application would consist of two
-        parts, data retrieval based on the end-user and a generated
-        itinerary. Automatic itinerary generators such as 
-        \cite{DeChoudhury2010,DUNSTALL2008a,DiBitonto2010a,Gavalas
-        ,Tumas2009} 
-        
+        An adequate automated trip planner application would consist
+        of two parts, data retrieval based on the end-user and a
+        generated itinerary. Numerous systems are available and 
+        therefore building a working prototype is possible and feasible 
+        \cite{Sylejmani2017,Tumas2009, Vansteenwegen2011,Kurata2013,
+        RamalhoBrilhante2014, DeChoudhury2010,DUNSTALL2008a, 
+        DiBitonto2010a,Gavalas}. Altough these systems can automate well the
+        process of producing the itinerary, do they require a lot of 
+        end-user data and preferences? How much of the user information
+        gathering can be automated?
 
-        
+        Given the amount of information a single user holds online, 
+        it is possible to automate and help the process of 
+        gathering personal preferences \cite{Buraya2017}. A deep 
+        learning model could be trained to classify a person's social
+        media profile, for instance Instagram and 
+
+\subsection{Motivation}
