--- a/Documentation.tex
+++ b/Documentation.tex
@@ -13,10 +13,18 @@
 
   \maketitle
 
+  \begin{abstract}
+  \end{abstract}
+
+  \begin{IEEEkeywords}
+  tourism,itinerary.
+  \end{IEEEkeywords}
+
   \section{Introduction}
     \input{sections/Introduction}
 
-  \section{Literature Review}
+  \section{Background Research and Literature Review}
+    \input{sections/LiteratureReview}
 
   \bibliographystyle{IEEEtran}
   \bibliography{fypReferences}
