--- a/Documentation.tex
+++ b/Documentation.tex
@@ -17,7 +17,7 @@
   \end{abstract}
 
   \begin{IEEEkeywords}
-  tourism,itinerary.
+  tourism,itinerary, user-profiling.
   \end{IEEEkeywords}
 
   \section{Introduction}
