--- a/sections/LiteratureReview.tex
+++ b/sections/LiteratureReview.tex
@@ -1,3 +1,7 @@
-The following subsections describe automatic itinerary
-generator systems both from research papers and those
-avaiable on the market.
+A number of works both on image classification and on automatic
+trip itinerary generation have been carried out throughout the years.
+
+\subsection{User Profiling/ Travel Pref.}
+
+
+\subsection{Automatic Trip Planners}
