--- a/sections/LiteratureReview.tex
+++ b/sections/LiteratureReview.tex
@@ -1,5 +1,5 @@
-A number of works both on image classification and on automatic
-trip itinerary generation have been carried out throughout the years.
+A number of works both on image classification and on automatic trip
+itinerary generation have been carried out throughout the years.
 
 \subsection{User Profiling/ Travel Pref.}
 
