--- a/Documentation.tex
+++ b/Documentation.tex
@@ -5,7 +5,7 @@
 \title{Intelligent Tourist Travel Planner}
 
 \author{\IEEEauthorblockN{Liam Attard [0299300L] }
-\IEEEauthorblockA{Department of Artificial Intelligence} 
+\IEEEauthorblockA{Department of Artificial Intelligence}
 \textit{University of Malta}\\
 \textit{liam.attard.18@um.edu.mt}}
 
@@ -14,6 +14,13 @@
   \maketitle
 
   \begin{abstract}
+    orem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+    enim ad minim veniam, quis nostrud exercitation ullamco laboris
+    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+    reprehenderit in voluptate velit esse cillum dolore eu fugiat
+    nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+    sunt in culpa qui officia deserunt mollit anim id est laborum.
   \end{abstract}
 
   \begin{IEEEkeywords}
