--- a/sections/LiteratureReview.tex
+++ b/sections/LiteratureReview.tex
@@ -1,7 +1,7 @@
-A number of works both on image classification and on automatic trip
-itinerary generation have been carried out throughout the years.
+Several studies both on user profiling and on real-time automatic trip
+itinerary generation have been carried out throughout the years. The
+following section will discuss the existing studies 
 
-\subsection{User Profiling/ Travel Pref.}
+\subsection{Automated Trip Systems}
 
-
-\subsection{Automatic Trip Planners}
+\subsection{User Profiling for Travel Preferences}
