--- a/Documentation.tex
+++ b/Documentation.tex
@@ -2,7 +2,8 @@
 
 \usepackage{cite}
 
-\title{Intelligent Tourist Travel Planner}
+\title{A Novel Approach for Utilising User Profiling Within the
+       Automated Tourist Trip Design Problem}
 
 \author{\IEEEauthorblockN{Liam Attard [0299300L] }
 \IEEEauthorblockA{Department of Artificial Intelligence}
@@ -14,7 +15,7 @@
   \maketitle
 
   \begin{abstract}
-    orem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+    lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
     enim ad minim veniam, quis nostrud exercitation ullamco laboris
     nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
