--- a/sections/Introduction.tex
+++ b/sections/Introduction.tex
@@ -18,7 +18,7 @@
         Numerous systems are available and therefore building a
         working prototype is both possible and feasible
         \cite{Sylejmani2017,Chang2016,Sylejmani2012,Sebastia2009a,
-        Tumas2009, Vansteenwegen2011,Kurata2013, RamalhoBrilhante2014,
+        Tumas2009,Kurata2013, RamalhoBrilhante2014,
         DeChoudhury2010,DUNSTALL2008a, DiBitonto2010a,Gavalas }.
         Although these systems automate the process of producing the
         itinerary, they require a lot of end-user data and preferences
