--- a/sections/LiteratureReview.tex
+++ b/sections/LiteratureReview.tex
@@ -1,7 +1,16 @@
 Several studies both on user profiling and on real-time automatic trip
-itinerary generation have been carried out throughout the years. The
-following section will discuss the existing studies 
+itinerary generation have been carried out throughout the years. 
 
 \subsection{Automated Trip Systems}
+
+Sylejmani et al.\cite{Sylejmani2017} have defined the Tourist Trip
+Design Problem(TTDP) as part of the Orienteering Problem(OP). OP
+problems contain a number of nodes each containing a score and try to
+solve the path containing the maximal score constrained with
+parameters such as time and budget \cite{Gunawan2016}. There are many solutions to this
+problem which will be discussed chronologically in the next section.
+
+Dunstall et al. \cite{DUNSTALL2008a}
+
 
 \subsection{User Profiling for Travel Preferences}
