--- a/sections/LiteratureReview.tex
+++ b/sections/LiteratureReview.tex
@@ -1,16 +1,38 @@
 Several studies both on user profiling and on real-time automatic trip
 itinerary generation have been carried out throughout the years. 
 
-\subsection{Automated Trip Systems}
-
 Sylejmani et al.\cite{Sylejmani2017} have defined the Tourist Trip
 Design Problem(TTDP) as part of the Orienteering Problem(OP). OP
 problems contain a number of nodes each containing a score and try to
 solve the path containing the maximal score constrained with
-parameters such as time and budget \cite{Gunawan2016}. There are many solutions to this
-problem which will be discussed chronologically in the next section.
+parameters such as time and budget \cite{Gunawan2016}. There are many
+solutions to this problem which will be discussed in the next section.
+% Maybe talk about OP..etc
 
-Dunstall et al. \cite{DUNSTALL2008a}
+\subsection{Automated Trip Systems}
+
+
+In 2004, a paper by Dunstall et al. \cite{DUNSTALL2008a} was published
+using a prototype called the The Electronic Travel Planner (ETP). This
+system selects destinations by determining activities based on the
+user’s preferences. Each activity is stored in a relational database
+with information such as duration, availability, date and time
+categorised as either tours, lodging or transportation. The
+requirements for forming such an itinerary include the number of
+children and adults, the location, the date range, budget and user
+preferences in the form of \emph{mandatory, at least once, desired,
+forbidden and permitted} activities. Since examples given in the paper took 15-45 seconds to process
+the results running time was listed as an issue.
+
+The Recommender System (RS) was provided by Sebatsia et al.
+\cite{Sebastia2009a} and Garcia et al. \cite{Garcia2011} to suggest tourist locations.
+User preferences are collected in the form of age, gender, nationality
+and ontology. The recommender is based on 4 techniques, \emph{Demographic
+recommendation, collaborative recommendation, content based
+recommendation and knowledge based recommendation}. 
+
+
 
 
 \subsection{User Profiling for Travel Preferences}
+ 
