--- a/sections/LiteratureReview.tex
+++ b/sections/LiteratureReview.tex
@@ -31,6 +31,12 @@ and ontology. The recommender is based on 4 techniques, \emph{Demographic
 recommendation, collaborative recommendation, content based
 recommendation and knowledge based recommendation}. 
 
+A different approach using social media was presented by Choudhury et
+al. \cite{DeChoudhury2010} in 2010. Geo-referenced Flickr content was used to gather
+information such as the date and location of the photos being
+uploaded. An OP algorithm was then used to generate the ideal number
+of Point of Interests (POI).
+
 
 
 
