--- a/Documentation.tex
+++ b/Documentation.tex
@@ -1,9 +1,9 @@
 \documentclass[conference]{IEEEtran}
 
 \usepackage{cite}
+\usepackage{hyperref}
 
-\title{A Novel Approach for Utilising User Profiling Within the
-       Automated Tourist Trip Design Problem}
+\title{Automatic User Profiling for Intelligent Tourist Trip Personalisation}
 
 \author{\IEEEauthorblockN{Liam Attard [0299300L] }
 \IEEEauthorblockA{Department of Artificial Intelligence}
