--- a/sections/LiteratureReview.tex
+++ b/sections/LiteratureReview.tex
@@ -8,55 +8,55 @@ content from users and social media services, path recommenders} and
 \textbf{Personlised multiple-day tour planners}. The planning of a
 trip to a traveller introduces the Tourist Trip Design Problem (TTDP)
 which has recieved a lot of observation and heuristic contribution
-\cite{Gunawan2016,Delic2018}. Sylejmani et al.\cite{Sylejmani2017} have defined
-the TTDP as part of the Orienteering Problem(OP). OP problems contain
-a number of nodes each containing a score and try to solve the path
-containing the maximal score constrained with parameters such as time
-and budget \cite{Gunawan2016}. There are many solutions to this
-problem which will be discussed in the next section.
+\cite{Gunawan2016,Delic2018}. Sylejmani et al.\cite{Sylejmani2017}
+have defined the TTDP as part of the Orienteering Problem(OP). OP
+problems contain a number of nodes each containing a score and try to
+solve the path containing the maximal score constrained with
+parameters such as time and budget \cite{Gunawan2016}. There are many
+solutions to this problem which will be discussed in the next section.
 % Maybe talk about OP..etc
 
 \subsection{Tourist Recommender Systems}
 
-    In 2004, a paper by Dunstall et al. \cite{DUNSTALL2008a} was published
-    using a prototype called the The Electronic Travel Planner (ETP). This
-    system selects destinations by determining activities based on the
-    user’s preferences. Each activity is stored in a relational database
-    with information such as duration, availability, date and time
-    categorised as either tours, lodging or transportation. The
-    requirements for forming such an itinerary include the number of
-    children and adults, the location, the date range, budget and user
-    preferences in the form of \emph{mandatory, at least once, desired,
-    forbidden and permitted} activities. Since examples given in the paper
-    took 15-45 seconds to process the resulting running time was listed as
-    an issue.
+    In 2004, a paper by Dunstall et al. \cite{DUNSTALL2008a} was
+    published using a prototype called the The Electronic Travel
+    Planner (ETP). This system selects destinations by determining
+    activities based on the user’s preferences. Each activity is
+    stored in a relational database with information such as duration,
+    availability, date and time categorised as either tours, lodging
+    or transportation. The requirements for forming such an itinerary
+    include the number of children and adults, the location, the date
+    range, budget and user preferences in the form of \emph{mandatory,
+    at least once, desired, forbidden and permitted} activities. Since
+    examples given in the paper took 15-45 seconds to process the
+    resulting running time was listed as an issue.
 
     The Recommender System (RS) was provided by Sebatsia et al.
-    \cite{Sebastia2009a} and Garcia et al. \cite{Garcia2011} to suggest
-    tourist locations. User preferences are collected in the form of age,
-    gender, nationality and ontology. The recommender is based on 4
-    techniques, \emph{Demographic recommendation, collaborative
-    recommendation, content based recommendation and knowledge based
-    recommendation}. 
+    \cite{Sebastia2009a} and Garcia et al. \cite{Garcia2011} to
+    suggest tourist locations. User preferences are collected in the
+    form of age, gender, nationality and ontology. The recommender is
+    based on 5 techniques, \emph{Demographic recommendation,
+    collaborative recommendation, content based recommendation and
+    knowledge based recommendation}. 
 
-    A different approach using social media was presented by Choudhury et
-    al. \cite{DeChoudhury2010} in 2010 and Brilhante et al.
+    A different approach using social media was presented by Choudhury
+    et al. \cite{DeChoudhury2010} in 2010 and Brilhante et al.
     \cite{RamalhoBrilhante2014}. Geo-referenced Flickr
-    \footnote{\url{https://www.flickr.com/}} content alongside Wikipedia
-    \footnote{\url{https://www.wikipedia.org/}} information was used to
-    gather information such as the date, location and popularity of the
-    photos being uploaded. An OP algorithm was then used to generate the
-    ideal number of Point of Interests (POI).
+    \footnote{\url{https://www.flickr.com/}} content alongside
+    Wikipedia \footnote{\url{https://www.wikipedia.org/}} information
+    was used to gather information such as the date, location and
+    popularity of the photos being uploaded. An OP algorithm was then
+    used to generate the ideal number of Point of Interests (POI).
 
     A tabu Search approach was proposed by Sylejmani et al.
-    \cite{Sylejmani2012} as a Multi Constrained Team Orienteering Problem
-    with Time Windows (\textbf{MCTOPTW}), an advanced form of the OP.In
-    this algorithm, three steps were used in order to generate the
-    activity plan. A new activity is added as a node to the trip using
-    \emph{Insert}, A node is exchanged with a new activity using
-    \emph{Replace} and two nodes are swapped using \emph{Swap}. A pair of
-    tabu lists structured frequently are used to avoid repeating
-    solutions.
+    \cite{Sylejmani2012} as a Multi Constrained Team Orienteering
+    Problem with Time Windows (\textbf{MCTOPTW}), an advanced form of
+    the OP.In this algorithm, three steps were used in order to
+    generate the activity plan. A new activity is added as a node to
+    the trip using \emph{Insert}, A node is exchanged with a new
+    activity using \emph{Replace} and two nodes are swapped using
+    \emph{Swap}. A pair of tabu lists structured frequently are used
+    to avoid repeating solutions.
 
 
     Recently, a solution towards presenting an itinerary solving
@@ -70,8 +70,8 @@ problem which will be discussed in the next section.
         \item \textbf{Subgroups}: The tourists are separated into
         smaller groups by preference and travel together.
         \item \textbf{All Together}: One itinerary for all Tourists.
-        \item \textbf{Tourists Combined}: At certain times, tourists are separated to
-    meet their personal preferences
+        \item \textbf{Tourists Combined}: At certain times, tourists
+    are separated to meet their personal preferences
 
     \end{enumerate}
 
