--- a/sections/LiteratureReview.tex
+++ b/sections/LiteratureReview.tex
@@ -1,10 +1,9 @@
 Several studies both on user profiling and on real-time automatic trip
-itinerary generation have been carried out throughout the years. 
-
-There are many types of systems which help the travellers in their
-trips. Gavalas et al. \cite{Gavalas2014} categorised these into
-\textbf{POI recommenders, Tourist Service Recommenders, Collaborative
-content from users and social media services, path recommenders} and
+itinerary generation have been carried out throughout the years. There
+are many types of systems which help the travellers in their trips.
+Gavalas et al. \cite{Gavalas2014} categorised these into \textbf{POI
+recommenders, Tourist Service Recommenders, Collaborative content from
+users and social media services, path recommenders} and
 \textbf{Personlised multiple-day tour planners}. The planning of a
 trip to a traveller introduces the Tourist Trip Design Problem (TTDP)
 which has recieved a lot of observation and heuristic contribution
@@ -99,11 +98,21 @@ solutions to this problem which will be discussed in the next section.
     from local search and repeats the procedure until a desired score
     is reached. In 2011, CityPlanner3 \cite{Vansteenwegen2011a}
     integrated ILS with Greedy Randomised adaptive search Procedure
-    (GRASP) \cite{Feo1995}. This system allowed to alter POI durations and choose a
-    starting and ending point.
-
-
-
+    (GRASP) \cite{Feo1995}. This system allowed to alter POI durations
+    and choose a starting and ending points
 
 \subsection{User Profiling for Travel Preferences}
+
+    Recent years have shown the average internet user has gone from a
+    passive content absorber to content producers through the rise in
+    social media \cite{Ikeda}. This section describes previous methods
+    of user profiling and information gathering.
+
+    Textual data from comments and posts can be used to gather such
+    user preferences. In 2013, A system was shown by Ikeda et al.
+    \cite{Ikeda} which could perform sentiment analysis based on
+    100,000 Japanese user profiles for demographic estimation.
+     
+
+
  
