--- a/Documentation.tex
+++ b/Documentation.tex
@@ -1,7 +1,11 @@
 \documentclass[conference]{IEEEtran}
 
 \usepackage{cite}
+\usepackage{float}
 \usepackage{hyperref}
+\usepackage{graphicx}
+\graphicspath{ {./Assets/} }
+
 
 \title{Automatic User Profiling for Intelligent Tourist Trip Personalisation}
 
