--- a/Documentation.tex
+++ b/Documentation.tex
@@ -38,6 +38,15 @@
   \section{Background Research and Literature Review}
     \input{sections/LiteratureReview}
 
+  \section{The Dataset}
+    \input{sections/Dataset}
+  
+  \section{Proposed Solution}
+  \label{Proposed}
+
+  \section{Evaluation Plan}
+  \label{Evaluation}
+
   \bibliographystyle{IEEEtran}
   \bibliography{fypReferences}
 
