--- a/sections/LiteratureReview.tex
+++ b/sections/LiteratureReview.tex
@@ -103,9 +103,10 @@ solutions to this problem which will be discussed in the next section.
 
 \subsection{User Profiling for Travel Preferences}
     Recent years have shown how the average internet user has gone
-    from a passive content absorber to also content producer through
-    the rise in social media \cite{Ikeda}. This section describes
-    methods of user profiling and information gathering.\\
+    from being a passive content absorber to a content producer
+    through the rise in social media \cite{Ikeda}. This section
+    describes several methods for user profiling and information
+    gathering.\\
 
     \subsubsection{User Profiling based on textual methods} Textual
     data from comments and posts can be used to gather such user
@@ -114,7 +115,7 @@ solutions to this problem which will be discussed in the next section.
     100,000 Japanese user profiles and perform demographic estimation.
     Tags from social media posts can also be useful information to
     gather information about the user. Hung et al. \cite{Hung2008}
-    demonstrated a technique in user profiling based on tags.  Given
+    demonstrated a user profiling technique based on tags.  Given
     an object and a user, the similarity between the tags is
     calculated. Both of these maximum similarities are summed up by
     the correlation between the set of object tags and the set of user
@@ -122,7 +123,7 @@ solutions to this problem which will be discussed in the next section.
 
     \subsubsection{User Profiling based on images} Terttunen
     \cite{Terttunen2017} has shown how Instagram
-    \footnote{https://www.instagram.com/} has been of a major
+    \footnote{\url{https://www.instagram.com/}} has been of a major
     influence towards tourists. The ability to share photos of the
     amazing sights and landscapes has provided with more excitement
     than looking for inspiration in a tourism brochure.
@@ -142,3 +143,12 @@ solutions to this problem which will be discussed in the next section.
         \includegraphics{fasttagSample}
         \label{fasttag}
     \end{figure}
+
+    A technique which could be applied for user profiling could be
+    classifying a person’s social media images. Deep neural networks
+    play an important role in this field of Image Classification 
+    \cite{Balaji2019,Cufoglu}. In sections \ref{Proposed},\ref{Evaluation},
+    this paper will describe how this technology could be used to
+    gather information for a tourist’s user preference. 
+
+    
