--- a/Documentation.tex
+++ b/Documentation.tex
@@ -38,13 +38,14 @@
   \section{Background Research and Literature Review}
     \input{sections/LiteratureReview}
 
+  \section{Proposed Solution}
+    \label{Proposed}
+    \input{sections/ProposedSolution}
+
   \section{The Dataset}
     \input{sections/Dataset}
-  
-  \section{Proposed Solution}
-  \label{Proposed}
 
-  \section{Evaluation Plan}
+  \section{Results and Evaluation Plan}
   \label{Evaluation}
 
   \bibliographystyle{IEEEtran}
