--- a/Documentation.tex
+++ b/Documentation.tex
@@ -43,10 +43,12 @@
     \input{sections/ProposedSolution}
 
   \section{The Dataset}
+    \label{Dataset}
     \input{sections/Dataset}
 
-  \section{Results and Evaluation Plan}
+  \section{Evaluation and Results}
   \label{Evaluation}
+    \input{sections/Evaluation}
 
   \bibliographystyle{IEEEtran}
   \bibliography{fypReferences}
