--- a/sections/Dataset.tex
+++ b/sections/Dataset.tex
@@ -14,8 +14,8 @@ a bar and the football dataset contains images of stadiums for sport
 fans. 
 
     \begin{figure}[H]
-        \caption{The image shows a sample image form each of the category}
+        \caption{The image shows a sample image form each of the categories.}
         \centering
-        \includegraphics[scale=0.3]{dataset.png}
+        \includegraphics[scale=0.4]{dataset.png}
         \label{dataset}
     \end{figure}
