--- a/sections/LiteratureReview.tex
+++ b/sections/LiteratureReview.tex
@@ -147,7 +147,7 @@ solutions to this problem which will be discussed in the next section.
     A technique which could be applied for user profiling could be
     classifying a person’s social media images. Deep neural networks
     play an important role in this field of Image Classification 
-    \cite{Balaji2019,Cufoglu}. In sections \ref{Proposed},\ref{Evaluation},
+    \cite{Balaji2019,Cufoglu,FrancoisChollet2017}. In sections \ref{Proposed},\ref{Evaluation},
     this paper will describe how this technology could be used to
     gather information for a tourist’s user preference. 
 
