--- a/sections/ProposedSolution.tex
+++ b/sections/ProposedSolution.tex
@@ -1,13 +1,13 @@
-The Proposed solution will consist of three parts:
+The Proposed solution will consist of four parts:
 
 \begin{enumerate}
     \item A dataset consisting of public Instagram images which will
-    be discussed in section cite
+    be discussed in section \ref{Dataset}
     \item A trained Convolutional Neural Network (CNN) model to
     predict the image category. A prototype of this model will be
-    discussed in section cite.
+    discussed in section \ref{Evaluation}.
     \item A method for calculating the scores of activities
-    \item A genetic algorithm able to produce itineraries in
+    \item A genetic algorithm which is able to produce itineraries in
     reasonable time and with a high score.
 \end{enumerate}
 
