--- a/Documentation.tex
+++ b/Documentation.tex
@@ -4,6 +4,8 @@
 \usepackage{float}
 \usepackage{hyperref}
 \usepackage{graphicx}
+\usepackage{setspace}
+\setstretch{1.15}
 \graphicspath{ {./Assets/} }
 
 
@@ -49,6 +51,10 @@
   \section{Evaluation and Results}
   \label{Evaluation}
     \input{sections/Evaluation}
+
+  \section{Conclusion}
+  \label{Conclusion}
+    \input{sections/Conclusion}
 
   \bibliographystyle{IEEEtran}
   \bibliography{fypReferences}
